--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "license": "MIT",
   "scripts": {
     "test:singleton": "mocha -r ts-node/register src/singleton/*.spec.ts",
-    "test:factory": "mocha -r ts-node/register src/factory/*.spec.ts"
+    "test:factory": "mocha -r ts-node/register src/factory/*.spec.ts",
+    "test:abstract-factory": "mocha -r ts-node/register src/abstract-factory/*.spec.ts"
   },
   "dependencies": {
     "typescript": "^3.9.5"
