--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test:singleton": "mocha -r ts-node/register src/singleton/*.spec.ts",
     "test:factory": "mocha -r ts-node/register src/factory/*.spec.ts",
-    "test:abstract-factory": "mocha -r ts-node/register src/abstract-factory/*.spec.ts"
+    "test:abstract-factory": "mocha -r ts-node/register src/abstract-factory/*.spec.ts",
+    "test:adapter": "mocha -r ts-node/register src/adapter/*.spec.ts"
   },
   "dependencies": {
     "typescript": "^3.9.5"
